Increase size of svg to prevent dots from being cut off

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 	text-align:center;
 }
 body{
-	
+	width:470px;
+	height:470px;
 	transform-origin: 0 0;
 	
 	-webkit-transform-origin: 0 0;
